{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 386,
  "lineage": "c6cdfbb3-045f-8cf8-7bf6-749bf173aceb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gr5_capstone2_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2862ba75c9ceb96",
            "domain": "vpc",
            "id": "eipalloc-0d2862ba75c9ceb96",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-190-246-165.us-west-2.compute.amazonaws.com",
            "public_ip": "54.190.246.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gr5-capstone2-nat"
            },
            "tags_all": {
              "Name": "gr5-capstone2-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gr5_capstone2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:962804699607:internet-gateway/igw-0af797081eb46aee1",
            "id": "igw-0af797081eb46aee1",
            "owner_id": "962804699607",
            "tags": {
              "Name": "gr5-capstone2-igw"
            },
            "tags_all": {
              "Name": "gr5-capstone2-igw"
            },
            "vpc_id": "vpc-09c01da7d83b53ed3"
          },
          "dependencies": [
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gr5_capstone2_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2862ba75c9ceb96",
            "association_id": "eipassoc-007e7ad84f1a1354a",
            "connectivity_type": "public",
            "id": "nat-008550ca57ea3b4a3",
            "network_interface_id": "eni-055de50a3455373e3",
            "private_ip": "10.0.83.199",
            "public_ip": "54.190.246.165",
            "subnet_id": "subnet-0960414ce7438326f",
            "tags": {
              "Name": "gr5-capstone2-nat"
            },
            "tags_all": {
              "Name": "gr5-capstone2-nat"
            }
          },
          "dependencies": [
            "aws_eip.gr5_capstone2_nat",
            "aws_internet_gateway.gr5_capstone2_igw",
            "aws_subnet.gr5_capstone2_public_us_west_2a",
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gr5_capstone2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:962804699607:route-table/rtb-0dd098140e0775397",
            "id": "rtb-0dd098140e0775397",
            "owner_id": "962804699607",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-008550ca57ea3b4a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gr5-capstone2-private"
            },
            "tags_all": {
              "Name": "gr5-capstone2-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c01da7d83b53ed3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gr5_capstone2_nat",
            "aws_internet_gateway.gr5_capstone2_igw",
            "aws_nat_gateway.gr5_capstone2_nat",
            "aws_subnet.gr5_capstone2_public_us_west_2a",
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gr5_capstone2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:962804699607:route-table/rtb-0d7c5104052c7472d",
            "id": "rtb-0d7c5104052c7472d",
            "owner_id": "962804699607",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af797081eb46aee1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gr5-capstone2-public"
            },
            "tags_all": {
              "Name": "gr5-capstone2-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c01da7d83b53ed3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gr5_capstone2_igw",
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gr5_capstone2_private-us-west-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01aa0864a4669ddd0",
            "route_table_id": "rtb-0dd098140e0775397",
            "subnet_id": "subnet-070cd6937d9c4cf10"
          },
          "dependencies": [
            "aws_eip.gr5_capstone2_nat",
            "aws_internet_gateway.gr5_capstone2_igw",
            "aws_nat_gateway.gr5_capstone2_nat",
            "aws_route_table.gr5_capstone2_private",
            "aws_subnet.gr5_capstone2_private_us_west_2b",
            "aws_subnet.gr5_capstone2_public_us_west_2a",
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gr5_capstone2_private_us_west_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a246a46c43be8af",
            "route_table_id": "rtb-0dd098140e0775397",
            "subnet_id": "subnet-040bb134e8615a197"
          },
          "dependencies": [
            "aws_eip.gr5_capstone2_nat",
            "aws_internet_gateway.gr5_capstone2_igw",
            "aws_nat_gateway.gr5_capstone2_nat",
            "aws_route_table.gr5_capstone2_private",
            "aws_subnet.gr5_capstone2_private_us_west_2a",
            "aws_subnet.gr5_capstone2_public_us_west_2a",
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gr5_capstone2_public-us-west-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085e1f5596491d9de",
            "route_table_id": "rtb-0d7c5104052c7472d",
            "subnet_id": "subnet-0960414ce7438326f"
          },
          "dependencies": [
            "aws_internet_gateway.gr5_capstone2_igw",
            "aws_route_table.gr5_capstone2_public",
            "aws_subnet.gr5_capstone2_public_us_west_2a",
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gr5_capstone2_public-us-west-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03991873e0808246c",
            "route_table_id": "rtb-0d7c5104052c7472d",
            "subnet_id": "subnet-0855890ebd663d5f6"
          },
          "dependencies": [
            "aws_internet_gateway.gr5_capstone2_igw",
            "aws_route_table.gr5_capstone2_public",
            "aws_subnet.gr5_capstone2_public_us_west_2b",
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gr5_capstone2_private_us_west_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:962804699607:subnet/subnet-040bb134e8615a197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040bb134e8615a197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962804699607",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gr5-capstone2-private-us-west-2a",
              "kubernetes.io/cluster/gr5-capstone2-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gr5-capstone2-private-us-west-2a",
              "kubernetes.io/cluster/gr5-capstone2-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09c01da7d83b53ed3"
          },
          "dependencies": [
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gr5_capstone2_private_us_west_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:962804699607:subnet/subnet-070cd6937d9c4cf10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070cd6937d9c4cf10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962804699607",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gr5-capstone2-private-us-west-2b",
              "kubernetes.io/cluster/gr5-capstone2-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gr5-capstone2-private-us-west-2b",
              "kubernetes.io/cluster/gr5-capstone2-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09c01da7d83b53ed3"
          },
          "dependencies": [
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gr5_capstone2_public_us_west_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:962804699607:subnet/subnet-0960414ce7438326f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0960414ce7438326f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962804699607",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gr5-capstone2-private-us-west-2a",
              "kubernetes.io/cluster/gr5-capstone2-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gr5-capstone2-private-us-west-2a",
              "kubernetes.io/cluster/gr5-capstone2-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09c01da7d83b53ed3"
          },
          "dependencies": [
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gr5_capstone2_public_us_west_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:962804699607:subnet/subnet-0855890ebd663d5f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0855890ebd663d5f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962804699607",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gr5-capstone2-private-us-west-2b",
              "kubernetes.io/cluster/gr5-capstone2-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gr5-capstone2-private-us-west-2b",
              "kubernetes.io/cluster/gr5-capstone2-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09c01da7d83b53ed3"
          },
          "dependencies": [
            "aws_vpc.gr5_capstone2_vpc_stack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gr5_capstone2_vpc_stack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:962804699607:vpc/vpc-09c01da7d83b53ed3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba4ffee052947bc4",
            "default_route_table_id": "rtb-0ec7d65d198567343",
            "default_security_group_id": "sg-02423de22de0d0c93",
            "dhcp_options_id": "dopt-f518238d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c01da7d83b53ed3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec7d65d198567343",
            "owner_id": "962804699607",
            "tags": {
              "Name": "gr5-capstone2-vpc-stack"
            },
            "tags_all": {
              "Name": "gr5-capstone2-vpc-stack"
            }
          }
        }
      ]
    }
  ]
}